--- a/src/components/atoms/styles/Error.scss
+++ b/src/components/atoms/styles/Error.scss
@@ -2,10 +2,10 @@
 
 .error-container {
   .error-text {
-    color: variables.$type-color;
+    color: variables.$secondary-dark-text-color;
   }
 
   .accent-text {
-    color: variables.$accent-color;
+    color: variables.$dark-accent-color;
   }
 }
