--- a/src/components/atoms/styles/Links.scss
+++ b/src/components/atoms/styles/Links.scss
@@ -5,11 +5,22 @@
     display: flex;
 
     p {
-      color: variables.$type-color;
+      color: variables.$secondary-dark-text-color;
     }
 
     a {
       margin-left: 10px;
+    }
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .links-component .links-container a {
+    color: variables.$dark-text-color;
+
+    &:hover {
+      color: variables.$dark-background-color;
+      background-color: variables.$dark-text-color;
     }
   }
 }
