--- a/src/components/atoms/styles/Projects.scss
+++ b/src/components/atoms/styles/Projects.scss
@@ -2,7 +2,7 @@
 
 .projects-component {
   .github-span {
-    color: variables.$accent-color;
+    color: variables.$dark-accent-color;
   }
 
   .list-item {
@@ -16,7 +16,7 @@
       grid-column-end: 1;
 
       span {
-        color: variables.$type-color;
+        color: variables.$secondary-dark-text-color;
       }
     }
 
