--- a/src/components/atoms/styles/Skills.scss
+++ b/src/components/atoms/styles/Skills.scss
@@ -3,7 +3,7 @@
 .skills-component {
   .container h4 {
     margin: 1rem 0;
-    color: variables.$accent-color;
+    color: variables.$dark-accent-color;
   }
 
   .item-container {
